tests/miniJava/neg/004490_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( Main java ) { return 0 ; } }
